# starling2-motion_planner

./: .gitmodules  README.md
starling2-moveit-config/: .setup_assistant  CMakeLists.txt  package.xml
starling2-moveit-config/config/: initial_positions.yaml  starling2.ros2_control.xacro  starling2.srdf  starling2.urdf.xacro
starling2-moveit-config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
starling2-planner/: CMakeLists.txt  package.xml
starling2-planner/src/: basic-plan.cpp  multi_obs_planner.cpp
